# BRIQ2

./: CMakeLists-BRIQX.txt  CMakeLists.txt  README.md  setup.sh  version.h  version.h.in
briqxmodule/: BMAlign.h  BMScore.h  BriqxModule.h  CMakeLists.txt  InfomapInterface.h  Main.cpp  MotifAssigner.h  MotifSpace.h  WrapperInfomap.h  bmAssign.cpp  findRedundantPDB.cpp  getMotifPDBbyBM.cpp  test.cpp  utils.h
briqxmodule/src/: BMScore.cpp  BriqxModule.cpp  CMakeLists.txt  MotifAssigner.cpp  WrapperInfomap.cpp  test
dataio/: binaryTable.h  datapaths.h  dirOperations.h
dataio/test/: CMakeLists.txt  txt2binaryBP6DEneTab.cpp  txt2binaryBP6DEneTabCG.cpp  txt2binaryMove.cpp
forcefield/: AtomicClashEnergy.h  BackboneConnectionEnergyCG.h  BasePair6DEnergyTable.h  BasePair6DEnergyTableCG.h  ForceFieldPara.h  HbondEnergy.h  PO3Builder.h  ProAtomicEnergyTable.h  ProEnergyTable.h  ProS1S2Energy.h  ProteinRNAEnergyTable.h  RiboseOxygenEnergyTable.h  RnaAtomicEnergyTable.h  RnaEnergyTable.h  RnaEnergyTableSimple.h  XPara.h  Xtb6dEnergy.h
forcefield/src/: AtomicClashEnergy.cpp  BackboneConnectionEnergyCG.cpp  BasePair6DEnergyTable.cpp  BasePair6DEnergyTableCG.cpp  CMakeLists.txt  ForceFieldPara.cpp  HbondEnergy.cpp  PO3Builder.cpp  ProAtomicEnergyTable.cpp  ProEnergyTable.cpp  ProS1S2Energy.cpp  ProteinRNAEnergyTable.cpp  RiboseOxygenEnergyTable.cpp  RnaAtomicEnergyTable.cpp  RnaEnergyTable.cpp  RnaEnergyTableSimple.cpp  XPara.cpp  Xtb6dEnergy.cpp
forcefield/test/: BasePairEnergyScan.cpp  CMakeLists.txt  CalRNAEnergy.cpp  CalculateBasePairEnergy.cpp  CalculateConnectEnergy.cpp  CalculateHbondEnergy.cpp  CalculateXtb6dEnergy.cpp  CompareStatisticalAndPhysical6D.cpp  GetLowEnergyClusters.cpp  Modify6DForcefield.cpp  TestAtomicEnergy.cpp  TestBP6DEneTabCGIO.cpp  TestBP6DEneTabIO.cpp  TestBackboneCG.cpp  TestBaseAtomNameAndSep.cpp  TestBasePairEnergy.cpp  TestMerge.cpp  TestProPolarEnergy.cpp  TestS1S2.cpp  xtb6dEnergyAdjustment.cpp
geometry/: Angles.h  ConvexPolygon.h  CsMove.h  Line2D.h  OrientationIndex.h  RMSD.h  TransMatrix.h  localframe.h  xy.h  xyz.h
geometry/test/: CMakeLists.txt  IndexToPDB.cpp  TestCoordSystem.cpp  TestTime.cpp
math/: AAProbabilityArray.h  AAProbabilityMatrix.h  AAScoreArray.h  AAScoreMatrix.h  KDTree.h  Stat.h  SubstitutionMatrix.h
model/: AssignProSSAndSasa.h  AssignRNASS.h  AssignRNASasa.h  AtomLib.h  BaseDistanceMatrix.h  BasePair.h  BasePairComposition.h  BasePairLib.h  BaseRotamer.h  BaseRotamerLib.h  DistanceMatrixHbond.h  DistanceMatrixRes.h  LigandLib.h  LigandRotamer.h  PhosphateRotamer.h  PhosphateRotamerLib.h  PolarGroupLib.h  RNABaseLib.h  RNABaseName.h  RNARibose.h  ResBBRotamer.h  ResBBRotamerLib.h  ResConformer.h  ResName.h  ResPeptideRotamer.h  ResPeptideRotamerLib.h  ResScRotamer.h  ResScRotamerLib.h  ResScRotamerLibMini.h  RiboseRotamer.h  RiboseRotamerLib.h  RotamerLib.h  StructureModel.h
model/src/: AssignProSSAndSasa.cpp  AssignRNASS.cpp  AssignRNASasa.cpp  AtomLib.cpp  BaseDistanceMatrix.cpp  BasePair.cpp  BasePairComposition.cpp  BasePairLib.cpp  BaseRotamer.cpp  BaseRotamerLib.cpp  CMakeLists.txt  DistanceMatrixHbond.cpp  DistanceMatrixRes.cpp  LigandLib.cpp  LigandRotamer.cpp  PhosphateRotamer.cpp  PhosphateRotamerLib.cpp  PolarGroupRotamerLib.cpp  RNABaseLib.cpp  RNABaseName.cpp  RNARibose.cpp  ResBBRotamer.cpp  ResBBRotamerLib.cpp  ResConformer.cpp  ResName.cpp  ResPeptideRotamer.cpp  ResPeptideRotamerLib.cpp  ResScRotamer.cpp  ResScRotamerLib.cpp  ResScRotamerLibMini.cpp  RiboseRotamer.cpp  RiboseRotamerLib.cpp  RotamerLib.cpp  StructureModel.cpp
model/test/: CMakeLists.txt  CalculateRNASASA.cpp  ExtractValidRNAPDB.cpp  TestAtomLib.cpp  TestBackboneRotamer.cpp  TestBaseLib.cpp  TestBasePairLib.cpp  TestDM.cpp  TestLigandLib.cpp  TestRNASS.cpp  TestRiboseRotamer.cpp  TestRotLib.cpp  TestSSAndSasa.cpp  TestStacking.cpp
motif/: MotifAlign.h  RGEdge.h  RGNode.h  RNAGraph.h  SimpleAlign.h
motif/test/: CMakeLists.txt  CalculateAllToAllScore.cpp  TestAlignScore.cpp  TestAlignment.cpp  TestSimpleAlign.cpp  rnaGraph.cpp  writeMotifPDB.cpp  writeSingleMotifPDB.cpp
para/: DesignPara.h  ProParameter.h
predNA/: BRConnection.h  BRFoldingTree.h  BRNode.h  BackboneModelingTemplate.h  BaseMoveLibrary.h  CsMoveTo6DKey.h  EdgeClusterRegister.h  EdgeInformation.h  EdgeMoveClusters.h  FragmentAssembling.h  FragmentLibrary.h  IndexPair.h  MCRun.h  MoveMutator.h  NuGraph.h  (+5 more)
predNA/test/: AddBaseToTarget.cpp  AlignPDB.cpp  AssembleMultipleFragments.cpp  AssembleTwoFragments.cpp  BackboneRefinement.cpp  BuildBackbone.cpp  BuildFoldingTree.cpp  BuildMutation.cpp  CMakeLists.txt  ConnectInfoToRMS.cpp  ContactKeyAnalysis.cpp  ContactKeySelection.cpp  ExtendHashkey.cpp  ExtendRiboConnectHashKey.cpp  GenerateDecoysRandInit.cpp  GenerateF2FragmentLib.cpp  GenerateF3FragmentLib.cpp  GenerateInitModel.cpp  GetCGModelingKey.cpp  GetSubPDB.cpp  InputFileToContactMatrix.cpp  KeyToCsMove.cpp  KeyToCsMove2.cpp  KeyToHbondCsMove.cpp  KeyToModel.cpp  ModelSelection.cpp  RNARMSD.cpp  RNAScoring.cpp  ReplaceFragment.cpp  ReplaceMotif.cpp  RunPredict.cpp  RunRefinement.cpp  RunRefinementFast.cpp  RunSubRefinement.cpp  SimpleMC.cpp  TestAssignment.cpp  TestBackbone.cpp  TestConnectionEnergy.cpp  TestEdgeInformation.cpp  TestFoldTree.cpp  (+23 more)
protein/src/: BuildMutationTemplate.cpp  CMakeLists.txt  EnergyArray.cpp  EnergyCalculator.cpp  EnergyMatrix.cpp  LoopModelingTemplate.cpp  ResConnection.cpp  ResFoldingTree.cpp  ResMutator.cpp  ResNode.cpp  RotSequence.cpp  SeqDesignTemplate.cpp  SeqDesignTemplateFast.cpp  SidechainModelingTemplate.cpp  SingleSidechainModelingTemplate.cpp
protein/test/: CMakeLists.txt  CalculateDetailEnergy.cpp  Design1ubq.cpp  GenerateSM.cpp  KeyToHbondCsMove.cpp  SinglePackToPDB.cpp  TestAtomicEnergy.cpp  TestDesign.cpp  TestLoopModeling.cpp  TestScModeling.cpp  TestSingleMutation.cpp  TestSingleSidechain.cpp  TestSinglechainFP.cpp  TestSinglechainFV.cpp  TetsDesignRanks.cpp
tools/test/: CMakeLists.txt  gaussEnergyCalculator.cpp  gaussEnergyCalculator2.cpp  writeMoveSetSP500.cpp  xtbEnergyCalculator.cpp  xtbEnergyCalculator2.cpp
(+72 files in other folders)
