link_directories(${PROJECT_BINARY_DIR}/lib)


add_executable(testMerge TestMerge.cpp)
add_executable(testConnect CalculateConnectEnergy.cpp)
add_executable(testXtb6d CalculateXtb6dEnergy.cpp)
add_executable(testHbEnergy CalculateHbondEnergy.cpp)
add_executable(testBBCG TestBackboneCG.cpp)
add_executable(testClashEnergy TestAtomicEnergy.cpp)
add_executable(rnaEne CalRNAEnergy.cpp)
add_executable(testBaseAtomName TestBaseAtomNameAndSep.cpp)
add_executable(basePairEnergy TestBasePairEnergy.cpp)
add_executable(testBP6DEneTabIO TestBP6DEneTabIO.cpp)
add_executable(testBP6DEneTabCGIO TestBP6DEneTabCGIO.cpp)
add_executable(scanBP BasePairEnergyScan.cpp)
add_executable(xtbAdj xtb6dEnergyAdjustment.cpp)
add_executable(compSP CompareStatisticalAndPhysical6D.cpp)
add_executable(cmListEne CalculateBasePairEnergy.cpp)
add_executable(m6d Modify6DForcefield.cpp)

target_link_libraries (m6d briqx)
target_link_libraries (cmListEne briqx)
target_link_libraries (compSP briqx)
target_link_libraries (xtbAdj briqx)
target_link_libraries (scanBP briqx)
target_link_libraries (testMerge briqx)
target_link_libraries (testConnect briqx)
target_link_libraries (testXtb6d briqx)
target_link_libraries (testHbEnergy briqx)
target_link_libraries (testBBCG briqx)
target_link_libraries (basePairEnergy briqx)
target_link_libraries (testClashEnergy briqx)
target_link_libraries (testBaseAtomName briqx)
target_link_libraries (rnaEne briqx)
target_link_libraries (testBP6DEneTabIO briqx)
target_link_libraries (testBP6DEneTabCGIO briqx)

install(TARGETS rnaEne testBBCG testHbEnergy testXtb6d testConnect testMerge testBP6DEneTabIO testBP6DEneTabCGIO basePairEnergy scanBP xtbAdj compSP cmListEne m6d
    RUNTIME DESTINATION bin)