add_library(nspmodel
AssignProSSAndSasa.cpp
AssignRNASasa.cpp
AssignRNASS.cpp
AtomLib.cpp
BaseDistanceMatrix.cpp
BasePair.cpp
BasePairComposition.cpp
BasePairLib.cpp
BaseRotamer.cpp
BaseRotamerLib.cpp
DistanceMatrixHbond.cpp
DistanceMatrixRes.cpp
PhosphateRotamer.cpp
PhosphateRotamerLib.cpp
ResBBRotamer.cpp
ResBBRotamerLib.cpp
ResConformer.cpp
ResName.cpp
ResPeptideRotamer.cpp
ResPeptideRotamerLib.cpp
ResScRotamer.cpp
ResScRotamerLib.cpp
ResScRotamerLibMini.cpp
RiboseRotamer.cpp
RiboseRotamerLib.cpp
RNABaseLib.cpp
RNABaseName.cpp
RNARibose.cpp
RotamerLib.cpp
StructureModel.cpp)