link_directories(${PROJECT_BINARY_DIR}/lib)

add_executable(testSASA TestSSAndSasa.cpp)
add_executable(testBaseLib TestBaseLib.cpp)
add_executable(testBasePairLib TestBasePairLib.cpp)
add_executable(testBBLib TestBackboneRotamer.cpp)
add_executable(testRotLib TestRotLib.cpp)
add_executable(testStacking TestStacking.cpp)
add_executable(extractValidRNAPDB ExtractValidRNAPDB.cpp)
add_executable(testRNASS TestRNASS.cpp)
add_executable(testLigand TestLigandLib.cpp)
add_executable(rnaSASA CalculateRNASASA.cpp)

target_link_libraries (rnaSASA briqx)
target_link_libraries (testLigand briqx)
target_link_libraries (testLigand briqx)
target_link_libraries (testRNASS briqx)
target_link_libraries (testStacking briqx)
target_link_libraries (testRotLib briqx)
target_link_libraries (testBBLib briqx)
target_link_libraries (testSASA briqx)
target_link_libraries (testBaseLib briqx)
target_link_libraries (testBasePairLib briqx)
target_link_libraries (extractValidRNAPDB briqx)

install(TARGETS testStacking testBaseLib testBasePairLib extractValidRNAPDB testRNASS testLigand rnaSASA
    RUNTIME DESTINATION bin)