

add_executable(keyToHbondMove KeyToHbondCsMove.cpp)
add_executable(keyToMove KeyToCsMove.cpp)
add_executable(testPred runRnaXp.cpp)
add_executable(testOpt optModel.cpp)
add_executable(debugEne energyDebug.cpp)
add_executable(rnaScoring RNAScoring.cpp)
add_executable(scoreRNAPDB TestScoring.cpp)
add_executable(ctToRMS ConnectInfoToRMS.cpp)
add_executable(testTree TestFoldTree.cpp)
add_executable(testBB TestBackbone.cpp)
add_executable(buildBB BuildBackbone.cpp)
add_executable(assignSS TestAssignment.cpp)
add_executable(rna_rms RNARMSD.cpp)
add_executable(rna_buildMutation BuildMutation.cpp)
add_executable(rna_assemble AssembleTwoFragments.cpp)
add_executable(rna_assemble_multiFragments AssembleMultipleFragments.cpp)
add_executable(buildFoldingTree BuildFoldingTree.cpp)
add_executable(trainPhoRep TrainPhoRep.cpp)
add_executable(briq_InitPDB GenerateInitModel.cpp)
add_executable(briq_Predict RunPredict.cpp)
add_executable(briq_Refinement RunRefinement.cpp)
add_executable(briq_RefinementFast RunRefinementFast.cpp)
add_executable(add_base AddBaseToTarget.cpp)
add_executable(replaceMotif ReplaceMotif.cpp)
add_executable(replaceFragment ReplaceFragment.cpp)
add_executable(testGraph TestGraph.cpp)


target_link_libraries (testGraph briqx)
target_link_libraries (briq_RefinementFast briqx)
target_link_libraries (replaceFragment briqx)
target_link_libraries (replaceMotif briqx)
target_link_libraries (add_base briqx)
target_link_libraries (rna_assemble_multiFragments briqx)
target_link_libraries (trainPhoRep briqx)
target_link_libraries (buildFoldingTree briqx)
target_link_libraries (rna_buildMutation briqx)
target_link_libraries (rna_assemble briqx)
target_link_libraries (rna_rms briqx)
target_link_libraries (briq_Predict briqx)
target_link_libraries (briq_Refinement briqx)
target_link_libraries (keyToHbondMove briqx)
target_link_libraries (assignSS briqx)
target_link_libraries (buildBB briqx)
target_link_libraries (testBB briqx)
target_link_libraries (testTree briqx)
target_link_libraries (keyToMove briqx)
target_link_libraries (scoreRNAPDB briqx)
target_link_libraries (testPred briqx)
target_link_libraries (testOpt briqx)
target_link_libraries (debugEne briqx)
target_link_libraries (briq_InitPDB briqx)
target_link_libraries (rnaScoring briqx)
target_link_libraries (ctToRMS briqx)

