add_executable(keyToHbondMove KeyToHbondCsMove.cpp)
add_executable(keyToMove KeyToCsMove.cpp)
add_executable(rnaScoring RNAScoring.cpp)
add_executable(scoreRNAPDB TestScoring.cpp)
add_executable(testBB TestBackbone.cpp)
add_executable(buildBB BuildBackbone.cpp)
add_executable(assignSS TestAssignment.cpp)
add_executable(rna_rms RNARMSD.cpp)
add_executable(rna_buildMutation BuildMutation.cpp)
add_executable(rna_assemble AssembleTwoFragments.cpp)
add_executable(rna_assemble_multiFragments AssembleMultipleFragments.cpp)
add_executable(briq_InitPDB GenerateInitModel.cpp)
add_executable(add_base AddBaseToTarget.cpp)
add_executable(replaceMotif ReplaceMotif.cpp)
add_executable(replaceFragment ReplaceFragment.cpp)
add_executable(testGraph TestGraph.cpp)
add_executable(testMoveIO TestMoveIO.cpp)
add_executable(testTree TestTree.cpp)
add_executable(testGraphMP TestGraphMP.cpp)
add_executable(trainSamp TrainSamplingEfficiency.cpp)
add_executable(testRand test.cpp)
add_executable(trainFFP TrainForcefieldPara.cpp)
add_executable(trainSingleBase TrainForcefieldParaSingleBaseMove.cpp)
add_executable(testSingle TestSingleBasePrediction.cpp)
add_executable(trainSingle2 TrainForcefieldSingleBaseMove2.cpp)
add_executable(eiLib TestEdgeInformation.cpp)
add_executable(testMove TestMoveSet.cpp)
add_executable(trainCG TrainCGModeling.cpp)
add_executable(inputToContactMatrix InputFileToContactMatrix.cpp)
add_executable(cgModeling GetCGModelingKey.cpp)
add_executable(rna_refinement RunRefinement.cpp)
add_executable(alignPDB AlignPDB.cpp)
add_executable(subPDB GetSubPDB.cpp)
add_executable(key2pdb KeyToModel.cpp)
add_executable(briqx_run RunPredict.cpp)
add_executable(briqx_refineBB BackboneRefinement.cpp)
add_executable(briqx_keySelection ContactKeySelection.cpp)


target_link_libraries (briqx_keySelection briqx)
target_link_libraries (briqx_refineBB briqx)
target_link_libraries (briqx_run briqx)
target_link_libraries (key2pdb briqx)
target_link_libraries (subPDB briqx)
target_link_libraries (alignPDB briqx)
target_link_libraries (rna_refinement briqx)
target_link_libraries (cgModeling briqx)
target_link_libraries (inputToContactMatrix briqx)
target_link_libraries (trainCG briqx)
target_link_libraries (testMove briqx)
target_link_libraries (eiLib briqx)
target_link_libraries (trainSingle2 briqx)
target_link_libraries (testSingle briqx)
target_link_libraries (trainSingleBase briqx)
target_link_libraries (trainFFP briqx)
target_link_libraries (testRand briqx)
target_link_libraries (trainSamp briqx)
target_link_libraries (testGraphMP briqx)
target_link_libraries (testGraph briqx)
target_link_libraries (replaceFragment briqx)
target_link_libraries (replaceMotif briqx)
target_link_libraries (add_base briqx)
target_link_libraries (rna_assemble_multiFragments briqx)
target_link_libraries (rna_buildMutation briqx)
target_link_libraries (rna_assemble briqx)
target_link_libraries (rna_rms briqx)
target_link_libraries (keyToHbondMove briqx)
target_link_libraries (assignSS briqx)
target_link_libraries (buildBB briqx)
target_link_libraries (testBB briqx)
target_link_libraries (testTree briqx)
target_link_libraries (keyToMove briqx)
target_link_libraries (scoreRNAPDB briqx)
target_link_libraries (briq_InitPDB briqx)
target_link_libraries (rnaScoring briqx)
target_link_libraries (testMoveIO briqx)

install(TARGETS testGraph testMoveIO testTree testGraphMP buildBB trainSamp testRand trainFFP trainSingleBase testSingle trainSingle2 eiLib testMove trainCG inputToContactMatrix briq_InitPDB cgModeling rna_assemble rna_refinement alignPDB subPDB rna_buildMutation key2pdb briqx_run briqx_refineBB briqx_keySelection
    RUNTIME DESTINATION bin)