add_executable(hbondMove KeyToHbondCsMove.cpp)
add_executable(testSSc TestSingleSidechain.cpp)
add_executable(writeSinglePackPDB SinglePackToPDB.cpp)
add_executable(testProAt TestAtomicEnergy.cpp)
add_executable(testSScFP TestSinglechainFP.cpp)
add_executable(testSScFV TestSinglechainFV.cpp)
add_executable(testLoop TestLoopModeling.cpp)
add_executable(testSc TestScModeling.cpp)
add_executable(getSM GenerateSM.cpp)
add_executable(testMut TestSingleMutation.cpp)
add_executable(testDesign TestDesign.cpp)
add_executable(energyDetail1ubq CalculateDetailEnergy.cpp)
add_executable(desUBQ Design1ubq.cpp)

target_link_libraries(desUBQ briqx)
target_link_libraries(energyDetail1ubq briqx)
target_link_libraries(testDesign briqx)
target_link_libraries(testMut briqx)
target_link_libraries (getSM briqx)
target_link_libraries (testSc briqx)
target_link_libraries (testLoop briqx)
target_link_libraries (testSScFP briqx)
target_link_libraries (testSScFV briqx)
target_link_libraries (writeSinglePackPDB briqx)
target_link_libraries (hbondMove briqx)
target_link_libraries (testSSc briqx)
target_link_libraries (testProAt briqx)